rename to restock and modify navigation

--- a/templates/components.html
+++ b/templates/components.html
@@ -26,7 +26,7 @@
             <i data-feather="target" class="text-purple-500 w-8 h-8"></i>
             <div>
                 <div class="text-sm font-medium">
-                    {% if page_type == 'delivery' %}
+                    {% if page_type == 'restock' %}
                         Active Deliveries
                     {% else %}
                         Active Navigation Tasks
