--- a/templates/home.html
+++ b/templates/home.html
@@ -14,9 +14,9 @@
                class="block w-full bg-blue-500 text-white rounded-lg px-4 py-3 text-center font-medium hover:bg-blue-600 transition-colors">
                 Navigation Mode
             </a>
-            <a href="{{ url_for('delivery') }}" 
+            <a href="{{ url_for('restock') }}" 
                class="block w-full bg-green-500 text-white rounded-lg px-4 py-3 text-center font-medium hover:bg-green-600 transition-colors">
-                Delivery Mode
+                Restocking Mode
             </a>
         </div>
     </div>
