add pop up window

--- a/templates/base.html
+++ b/templates/base.html
@@ -12,5 +12,6 @@
     <script>
         feather.replace()
     </script>
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/task_completion.css') }}">
 </body>
 </html>
