--- a/templates/base.html
+++ b/templates/base.html
@@ -6,12 +6,13 @@
     <title>Robot Control System</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/2.2.19/tailwind.min.css" rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/feather-icons/4.28.0/feather.min.js"></script>
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/task_completion.css') }}">
 </head>
 <body class="bg-gray-100">
     {% block content %}{% endblock %}
+    <script src="{{ url_for('static', filename='js/shared_functions.js') }}"></script>
     <script>
         feather.replace()
     </script>
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/task_completion.css') }}">
 </body>
 </html>
