--- a/templates/restock.html
+++ b/templates/restock.html
@@ -29,10 +29,10 @@
                             required>
                         <option value="" disabled selected>Select Target Area</option>
                         <option value="Entrance">Entrance</option>
-                        <option value="Shoe Area">Shoe Area</option>
+                        <option value="Laptop Area">Laptop Area</option>
                         <option value="Bottle Area">Bottle Area</option>
-                        <option value="Lamp Area">Lamp Area</option>
-                        <option value="Tissue Area">Tissue Area</option>
+                        <option value="Keyboard Area">Keyboard Area</option>
+                        <option value="Cup Area">Cup Area</option>
                     </select>
                     <div class="pointer-events-none absolute inset-y-0 right-0 flex items-center px-2 text-gray-700">
                         <svg class="fill-current h-4 w-4" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20">
@@ -46,13 +46,13 @@
                             class="border rounded p-2 w-full appearance-none" 
                             required>
                         <option value="" disabled selected>Select Target Product</option>
-                        <option data-location="Shoe Area" value="Shoe_1">Shoe_1</option>
-                        <option data-location="Shoe Area" value="Shoe_2">Shoe_2</option>
-                        <option data-location="Shoe Area" value="Shoe_3">Shoe_3</option>
+                        <option data-location="Laptop Area" value="Laptop_1">Laptop_1</option>
+                        <option data-location="Laptop Area" value="Laptop_2">Laptop_2</option>
+                        <option data-location="Laptop Area" value="Laptop_3">Laptop_3</option>
                         <option data-location="Bottle Area" value="Bottle_1">Bottle_1</option>
                         <option data-location="Bottle Area" value="Bottle_2">Bottle_2</option>
-                        <option data-location="Lamp Area" value="Lamp_1">Lamp_1</option>
-                        <option data-location="Tissue Area" value="Tissue_1">Tissue_1</option>
+                        <option data-location="Keyboard Area" value="Keyboard_1">Keyboard_1</option>
+                        <option data-location="Cup Area" value="Cup_1">Cup_1</option>
                     </select>
                     <div class="pointer-events-none absolute inset-y-0 right-0 flex items-center px-2 text-gray-700">
                         <svg class="fill-current h-4 w-4" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20">
