--- a/templates/base.html
+++ b/templates/base.html
@@ -10,7 +10,7 @@
 </head>
 <body class="bg-gray-100">
     {% block content %}{% endblock %}
-    <script src="{{ url_for('static', filename='js/shared_functions.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/functions.js') }}"></script>
     <script>
         feather.replace()
     </script>
