--- a/templates/restock.html
+++ b/templates/restock.html
@@ -113,6 +113,9 @@
 </div>
 
 <script>
+socket.on('new_restock', () => {
+    window.location.reload();
+});
 
 // Function to update task status
 async function updateStatus(taskId, newStatus, taskType) {
