--- a/templates/base.html
+++ b/templates/base.html
@@ -10,10 +10,13 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.0.1/socket.io.js"></script>
 </head>
 <body class="bg-gray-100">
+    <script>
+        const socket = io();
+    </script>
     {% block content %}{% endblock %}
     <script src="{{ url_for('static', filename='js/functions.js') }}"></script>
     <script>
-        feather.replace()
+        feather.replace();
     </script>
 </body>
 </html>
