add api connection and automatically restock and restock after user's done

--- a/templates/restock.html
+++ b/templates/restock.html
@@ -29,7 +29,7 @@
                             required>
                         <option value="" disabled selected>Select Target Area</option>
                         <option value="Entrance">Entrance</option>
-                        <option value="Laptop Area">Laptop Area</option>
+                        <option value="Vase Area">Vase Area</option>
                         <option value="Bottle Area">Bottle Area</option>
                         <option value="Keyboard Area">Keyboard Area</option>
                         <option value="Cup Area">Cup Area</option>
@@ -46,12 +46,12 @@
                             class="border rounded p-2 w-full appearance-none" 
                             required>
                         <option value="" disabled selected>Select Target Product</option>
-                        <option data-location="Laptop Area" value="Laptop_1">Laptop_1</option>
-                        <option data-location="Laptop Area" value="Laptop_2">Laptop_2</option>
-                        <option data-location="Laptop Area" value="Laptop_3">Laptop_3</option>
+                        <option data-location="Vase Area" value="Vase_1">Vase_1</option>
+                        <option data-location="Vase Area" value="Vase_2">Vase_2</option>
                         <option data-location="Bottle Area" value="Bottle_1">Bottle_1</option>
                         <option data-location="Bottle Area" value="Bottle_2">Bottle_2</option>
                         <option data-location="Keyboard Area" value="Keyboard_1">Keyboard_1</option>
+                        <option data-location="Keyboard Area" value="Keyboard_2">Keyboard_2</option>
                         <option data-location="Cup Area" value="Cup_1">Cup_1</option>
                     </select>
                     <div class="pointer-events-none absolute inset-y-0 right-0 flex items-center px-2 text-gray-700">
